updates for java 9